package(default_visibility = ["//visibility:public"])

load("//bzl:rules.bzl",
     "boot_executable",
     "boot_library",
     "boot_module",
     "bootstrap_ocamllex",
     "boot_signature"
)

exports_files([
    "check-parser-uptodate-or-warn.sh",
])

load("//config:CONFIG.bzl",
     # "TOOLS_MODULE_OPTS",
     # "TOOLS_SIG_OPTS"
     "OC_COMMON_CFLAGS",
     "PLATFORM_CFLAGS",
     )

# MODULE_OPTS/SIG_OPTS should include:
# -nostdlib -g
# -use-prims ../runtime /primitives
# -absname -w +a-4-9-41-42-44-45-48-70
# -strict-sequence -warn-error
# +A -principal -strict-formats -bin-annot

MODULE_OPTS = OC_COMMON_CFLAGS + PLATFORM_CFLAGS + [
    "-nostdlib",
    "-w", "-70"
]
SIG_OPTS    = ["-nostdlib"] + OC_COMMON_CFLAGS + PLATFORM_CFLAGS

STDLIB = ["//boot/lib:stdlib"] # , "//stdlib:Std_exit"]

## first the executables. modules and sigs below.
# programs_byte := \
#   ocamldep ocamlprof ocamlcp ocamloptp ocamlmklib  \
#   ocamlmktop ocamlcmt dumpobj ocamlobjinfo \
#   primreq stripdebug cmpbyt
# $(programs_byte:%=%$(EXE)):
# 	$(CAMLC) $(LINKFLAGS) -I $(ROOTDIR) -o $@ $(filter-out %.cmi,$^)

################################################################
# The dependency generator
# OCAMLDEP = \
#   $(ROOTDIR)/compilerlibs/ocamlcommon.cma \
#   $(ROOTDIR)/compilerlibs/ocamlbytecomp.cma \
#   ocamldep.cmo depend.cmi
# ocamldep$(EXE): LINKFLAGS += -compat-32
# ocamldep$(EXE): $(OCAMLDEP)
# ocamldep.opt$(EXE): $(call byte2native, $(OCAMLDEP))

boot_executable(
    name = "ocamldep",
    main = ":Ocamldep",
    deps = [
        "//compilerlibs:ocamlcommon",
        "//bytecomp:ocamlbytecomp",
    ]
)

################################################################
# Profiling: https://ocaml.org/manual/profil.html
# The OCaml profiling compilers: ocamlcp, ocamloptp, ocamlprof
boot_executable(
    name = "ocamlprof",
    main = ":Ocamlprof",
    deps = [
        "//utils:Config",
        "//utils:Build_path_prefix_map",
        "//utils:Misc",
        "//utils:Identifiable",
        "//utils:Numbers",
        "//utils:Arg_helper",
        "//utils:Clflags",
        "//utils:Terminfo",
        "//utils:Warnings",
        "//parsing:Location",
        "//parsing:Longident",
        "//parsing:Docstrings",
        "//parsing:Syntaxerr",
        "//parsing:Ast_helper",
        "//parsing:CamlinternalMenhirLib",
        "//parsing:Parser",
        "//parsing:Pprintast",
        "//parsing:Lexer",
        "//parsing:Parse",
    ]
)

boot_executable(
    name = "ocamlcp",
    main = ":Ocamlcp",
    deps = [
        "//utils:Config",
        "//utils:Build_path_prefix_map",
        "//utils:Misc",
        "//utils:Profile",
        "//utils:Warnings",
        "//utils:Identifiable",
        "//utils:Numbers",
        "//utils:Arg_helper",
        "//utils:Clflags",
        "//utils:Local_store",
        "//utils:Terminfo",
        "//parsing:Location",
        "//utils:Load_path",
        "//utils:Ccomp",
        "//driver:Compenv",
        "//driver:Main_args",
        ":Ocamlcp_common"
    ]
)

boot_executable(
    name = "ocamloptp",
    main = ":Ocamloptp",
    deps = [
        "//utils:Config",
        "//utils:Build_path_prefix_map",
        "//utils:Misc",
        "//utils:Profile",
        "//utils:Warnings",
        "//utils:Identifiable",
        "//utils:Numbers",
        "//utils:Arg_helper",
        "//utils:Clflags",
        "//utils:Local_store",
        "//utils:Terminfo",
        "//parsing:Location",
        "//utils:Load_path",
        "//utils:Ccomp",
        "//driver:Compenv",
        "//driver:Main_args",
        ":Ocamlcp_common"
    ]
)

################################################################
# To help building mixed-mode libraries (OCaml + C)
boot_executable(
    name = "ocamlmklib",
    main = ":Ocamlmklib",
    deps = [
        "//utils:Config",
        "//utils:Build_path_prefix_map",
        "//utils:Misc",
    ]
)

################################################################
# To make custom toplevels
# OCAMLMKTOP=config.cmo build_path_prefix_map.cmo misc.cmo \
#        identifiable.cmo numbers.cmo arg_helper.cmo clflags.cmo \
#        local_store.cmo load_path.cmo profile.cmo ccomp.cmo ocamlmktop.cmo
# ocamlmktop$(EXE): $(OCAMLMKTOP)
# ocamlmktop.opt$(EXE): $(call byte2native, $(OCAMLMKTOP))
boot_executable(
    name = "ocamlmktop",
    main = ":Ocamlmktop",
    deps = [
        "//utils:Config",
        "//utils:Build_path_prefix_map",
        "//utils:Misc",
        "//utils:Identifiable",
        "//utils:Numbers",
        "//utils:Arg_helper",
        "//utils:Clflags",
        "//utils:Local_store",
        "//utils:Load_path",
        "//utils:Profile",
        "//utils:Ccomp",
    ]
)

################################################################
# The preprocessor for asm generators
# cvt_emit := cvt_emit$(EXE)
# $(eval $(call PROGRAM_SYNONYM,cvt_emit))
# $(cvt_emit): cvt_emit.cmo
# 	$(CAMLC) $(LINKFLAGS) -o $@ $^

boot_executable(
    name = "cvt_emit.exe",
    main = ":Cvt_emit",
    # deps = STDLIB,
    visibility = ["//asmcomp:__subpackages__"]
)

boot_module(
    name   = "Cvt_emit",
    struct = "cvt_emit.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.Printf",
        "//bytecomp:Bytesections",
        "//stdlib:Stdlib.Array",
    ],
)

bootstrap_ocamllex(
    name = "cvt_emit_ml",
    out  = "cvt_emit.ml",
    src  = "cvt_emit.mll"
)

################################################################
# Reading cmt files
boot_executable(
    name = "ocamlcmt",
    main = ":Ocamlcmt",
    deps = [
        "//compilerlibs:ocamlcommon",
        "//bytecomp:ocamlbytecomp",
    ]
)

################################################################
# The bytecode disassembler
# DUMPOBJ= \
#           $(ROOTDIR)/compilerlibs/ocamlcommon.cma \
#           $(ROOTDIR)/compilerlibs/ocamlbytecomp.cma \
#           opnames.cmo dumpobj.cmo
# dumpobj$(EXE): $(DUMPOBJ)
# dumpobj.opt$(EXE): $(call byte2native, $(DUMPOBJ))
## i.e. only native, no vm build
boot_executable(
    name = "dumpobj",
    main = ":Dumpobj",
    deps = [
        "//compilerlibs:ocamlcommon",
        "//bytecomp:ocamlbytecomp",
        ":Opnames",
        ":Dumpobj"
    ],
    target_compatible_with = [
        "//platforms/target:sys?"
    ]
)

################################################################
## ocamlobjinfo - Display info on compiled files
boot_executable(
    name = "ocamlobjinfo",
    main = ":Objinfo",
    deps = [
        "//compilerlibs:ocamlcommon",
        "//bytecomp:ocamlbytecomp",
        "//middle_end:ocamlmiddleend",
    ]
)

################################################################
# # Scan object files for required primitives
# PRIMREQ=$(ROOTDIR)/compilerlibs/ocamlcommon.cma \
#         $(ROOTDIR)/compilerlibs/ocamlbytecomp.cma \
#         primreq.cmo
# primreq$(EXE): $(PRIMREQ)
# primreq.opt$(EXE): $(call byte2native, $(PRIMREQ))
boot_executable(
    name = "primreq",
    main = ":Primreq",
    deps = [
        "//compilerlibs:ocamlcommon",
        "//bytecomp:ocamlbytecomp",
    ]
)

################
# Copy a bytecode executable, stripping debug info
boot_executable(
    name = "stripdebug",
    main = ":Stripdebug",
    deps = [
        "//compilerlibs:ocamlcommon",
        "//bytecomp:ocamlbytecomp",
    ]
)

################
# Compare two bytecode executables
# CMPBYT=$(ROOTDIR)/compilerlibs/ocamlcommon.cma \
#        $(ROOTDIR)/compilerlibs/ocamlbytecomp.cma \
#        cmpbyt.cmo
# cmpbyt$(EXE): $(CMPBYT)
# cmpbyt.opt$(EXE): $(call byte2native, $(CMPBYT))
boot_executable(
    name = "cmpbyt",
    main = ":Cmpbyt",
    deps = [
        "//compilerlibs:ocamlcommon",
        "//bytecomp:ocamlbytecomp",
    ]
)

################
# make_opcodes, opnames.ml
# OCAMLRUN ?= $(ROOTDIR)/boot/ocamlrun$(EXE)
# NEW_OCAMLRUN ?= $(ROOTDIR)/runtime/ocamlrun$(EXE)
# opnames.ml: $(ROOTDIR)/runtime/caml/instruct.h $(make_opcodes)
# 	$(NEW_OCAMLRUN) $(make_opcodes) -opnames < $< > $@
boot_module(
    name = "Opnames",
    struct = "opnames.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
    ]
)


# ./runtime/ocamlrun tools/make_opcodes -opcodes < runtime/caml/instruct.h > bytecomp/opcodes.ml

genrule(
    name = "gen_opnames",
    outs = ["opnames.ml"],
    srcs = ["//runtime/caml:instruct.h", ":make_opcodes"],
    tools = ["//boot/bin:ocamlrun"],
    cmd   = " ".join([
        "$(execpath //boot/bin:ocamlrun) $(location :make_opcodes)",
        "-opcodes < $(location //runtime/caml:instruct.h)",
        "> $@"
    ])
)

################################################################
# LINTAPIDIFF=$(ROOTDIR)/compilerlibs/ocamlcommon.cmxa \
#         $(ROOTDIR)/compilerlibs/ocamlbytecomp.cmxa \
#         $(ROOTDIR)/compilerlibs/ocamlmiddleend.cmxa \
#         $(ROOTDIR)/otherlibs/str/str.cmxa \
#         lintapidiff.cmx

# lintapidiff.opt$(EXE): INCLUDES+= -I $(ROOTDIR)/otherlibs/str
# lintapidiff.opt$(EXE): $(LINTAPIDIFF)
# 	$(CAMLOPT_CMD) $(LINKFLAGS) -I $(ROOTDIR) -o $@ $(LINTAPIDIFF)

################
# checkstack tool
# checkstack$(EXE): checkstack.$(O)
# 	$(MKEXE) $(OUTPUTEXE)$@ $<

################
#Scan latex files, and run ocaml code examples
# caml_tex_files := \
#   $(ROOTDIR)/compilerlibs/ocamlcommon.cma \
#   $(ROOTDIR)/compilerlibs/ocamlbytecomp.cma \
#   $(ROOTDIR)/compilerlibs/ocamltoplevel.cma \
#   $(ROOTDIR)/otherlibs/str/str.cma \
#   $(ROOTDIR)/otherlibs/$(UNIXLIB)/unix.cma \
#   caml_tex.ml
# caml_tex := caml-tex$(EXE)
# caml-tex uses str.cma and unix.cma and so must be compiled with
# $(ROOTDIR)/ocamlc not $(ROOTDIR)/boot/ocamlc since the boot
# compiler does not necessarily have the correct shared library
# configuration.
# $(caml_tex): INCLUDES += $(addprefix -I $(ROOTDIR)/otherlibs/,str $(UNIXLIB))
# $(caml_tex): $(caml_tex_files)
# 	$(OCAMLRUN) $(ROOTDIR)/ocamlc$(EXE) -nostdlib -I $(ROOTDIR)/stdlib \
# 	  $(LINKFLAGS) -linkall -o $@ -no-alias-deps $^
# # we need str and unix which depend on the bytecode version of other tools
# # thus we delay building caml-tex to the opt.opt stage
# ifneq "$(WITH_CAMLTEX)" ""
# opt.opt: $(caml_tex)
# endif


##########################################################
################  ocaml modules and sigs  ################
## TODO: get the unix stuff set up
# boot_module(
#     name   = "Caml_tex",
#     struct = "caml_tex.ml",
#     opts = MODULE_OPTS,
#     deps   = STDLIB + [
#         "//driver:Compenv",
#         "//driver:Compmisc",
#         "//otherlibs/str:Str",
#         "//parsing:Ast_helper",
#         "//parsing:Ast_iterator",
#         "//parsing:Lexer",
#         "//parsing:Location",
#         "//parsing:Parse",
#         "//parsing:Parsetree_cmi",
#         "//parsing:Syntaxerr",
#         "//stdlib:Stdlib.Arg",
#         "//stdlib:Stdlib.Buffer",
#         "//stdlib:Stdlib.Bytes",
#         "//stdlib:Stdlib.Filename",
#         "//stdlib:Stdlib.Format",
#         "//stdlib:Stdlib.Lexing",
#         "//stdlib:Stdlib.List",
#         "//stdlib:Stdlib.Printexc",
#         "//stdlib:Stdlib.StdLabels",
#         "//stdlib:Stdlib.String",
#         "//stdlib:Stdlib.Sys",
#         "//toplevel:Toploop",
#         "//utils:Clflags",
#         "//utils:Misc",
#         ## (Unix)
#         #### (Mtd)
#         #### (Mty)
#     ],
# )

boot_module(
    name   = "Cmpbyt",
    struct = "cmpbyt.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.Printf",
        "//bytecomp:Bytesections",
        "//stdlib:Stdlib.Array",
    ],
)

boot_module(
    name   = "Dumpobj",
    target_compatible_with = ["//platforms/target:sys?"],
    struct = "dumpobj.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//stdlib:Stdlib.Sys",
        "//bytecomp:Symtable",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        ":Opnames",
        "//bytecomp:Opcodes",
        "//stdlib:Stdlib.Obj",
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Lexing",
        "//bytecomp:Instruct",
        "//typing:Ident",
        "//stdlib:Stdlib.Hashtbl",
        "//utils:Config",
        "//file_formats:Cmo_format_cmi",
        "//bytecomp:Bytesections",
        "//parsing:Asttypes_cmi",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Arg",
    ],
)

# eqparsetree.ml", line 66, characters 7-22:
# 66 |     | (Const_string a0, Const_string b0) -> eq_string (a0, b0)
#             ^^^^^^^^^^^^^^^
# Error: The constructor Const_string expects 3 argument(s),
#        but is applied here to 1 argument(s)
# boot_module(
#     name   = "Eqparsetree",
#     struct = "eqparsetree.ml",
#     opts = MODULE_OPTS,
#     deps   = STDLIB + [
#         # "//parsing:Asttypes_cmi",
#         "//parsing:Parsetree_cmi",
#         # "//parsing:Longident",
#         # "//parsing:Location",
#     ],
# # )

# lintapidiff.ml", line 41, characters 15-29:
# 41 | module IdMap = Misc.StringMap
#                     ^^^^^^^^^^^^^^
# Error: Unbound module Misc.StringMap
# boot_module(
#     name   = "Lintapidiff.opt",
#     mode   = "native",
#     struct = "lintapidiff.ml",
#     opts = MODULE_OPTS,
#     deps   = STDLIB + [
#         "//driver:Pparse",
#         "//otherlibs/str:Str",
#         "//parsing:Location",
#         "//parsing:Parse",
#         "//parsing:Parsetree_cmi",
#         "//stdlib:Stdlib.Array",
#         "//stdlib:Stdlib.Filename",
#         "//stdlib:Stdlib.Format",
#         "//stdlib:Stdlib.List",
#         "//stdlib:Stdlib.Printf",
#         "//stdlib:Stdlib.Scanf",
#         "//stdlib:Stdlib.String",
#         "//stdlib:Stdlib.Sys",
#         "//typing:Ident",
#         "//typing:Path",
#         "//typing:Printtyp",
#         "//utils:Misc",
#     ],
# # )

boot_module(
    name   = "Objinfo",
    struct = "objinfo.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//stdlib:Stdlib.Sys",
        "//bytecomp:Symtable",
        "//middle_end:Symbol",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//middle_end:Printclambda",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//middle_end:Linkage_name",
        #### (LargeFile)
        "//typing:Ident",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Filename",
        "//middle_end/flambda:Export_info",
        "//stdlib:Stdlib.Digest",
        "//middle_end:Compilation_unit",
        "//file_formats:Cmxs_format_cmi",
        "//file_formats:Cmx_format_cmi",
        "//file_formats:Cmt_format",
        "//file_formats:Cmo_format_cmi",
        "//file_formats:Cmi_format",
        "//bytecomp:Bytesections",
        "//utils:Binutils",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Arg",
    ],
)

boot_module(
    name   = "Ocamlcmt",
    struct = "ocamlcmt.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//typing:Untypeast",
        "//typing:Stypes",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//parsing:Pprintast",
        "//parsing:Location",
        "//utils:Load_path",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Filename",
        "//typing:Envaux",
        "//stdlib:Stdlib.Digest",
        "//driver:Compmisc",
        "//file_formats:Cmt_format",
        "//typing:Cmt2annot",
        "//utils:Clflags",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Arg",
        "//typing:Annot_cmi",
    ],
)

boot_module(
    name   = "Ocamlcp",
    struct = "ocamlcp.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//driver:Main_args",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Filename",
        "//driver:Compenv",
        "//stdlib:Stdlib.Arg",
        ":Ocamlcp_common"
    ],
)

boot_module(
    name   = "Ocamlcp_common",
    struct = "ocamlcp_common.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        # "//stdlib:Stdlib.Sys",
        # "//stdlib:Stdlib.String",
        # "//stdlib:Stdlib.Printf",
        "//driver:Main_args",
        # "//stdlib:Stdlib.List",
        # "//stdlib:Stdlib.Filename",
        # "//driver:Compenv",
        # "//stdlib:Stdlib.Arg",
    ],
)

boot_module(
    name   = "Ocamldep",
    struct = "ocamldep.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//driver:Makedepend"
    ],
)

boot_module(
    name   = "Ocamlmklib",
    struct = "ocamlmklib.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Stack",
        "//stdlib:Stdlib.Printf",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Filename",
        "//utils:Config",
        "//stdlib:Stdlib.Bytes",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Arg",
    ],
)

boot_module(
    name   = "Ocamlmktop",
    struct = "ocamlmktop.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Filename",
        "//utils:Config",
        "//utils:Ccomp",
        "//stdlib:Stdlib.Array",
    ],
)

boot_module(
    name   = "Ocamloptp",
    struct = "ocamloptp.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//driver:Compenv",
        "//driver:Main_args",
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Sys",
        ":Ocamlcp_common"
    ],
)

boot_module(
    name   = "Ocamlprof",
    struct = "ocamlprof.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//parsing:Location",
        "//parsing:Parse",
        "//parsing:Parsetree_cmi",
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Bytes",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Sys",
        "//utils:Warnings",
    ],
)

boot_module(
    name   = "Primreq",
    struct = "primreq.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//file_formats:Cmo_format_cmi",
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.List",
        "//utils:Config",
        "//utils:Misc",
    ],
)

boot_module(
    name   = "Profiling",
    struct = "profiling.ml",
    sig    = "Profiling_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Sys",
    ],
)

boot_signature(
    name = "Profiling_cmi",
    src  = "profiling.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
    ],
)

# ../boot/ocamlrun ../boot/ocamlc
boot_module(
    name   = "Stripdebug",
    struct = "stripdebug.ml",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//bytecomp:Bytesections",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Sys",
        "//utils:Misc",
    ],
)

################################################################
## root Makefile: The numeric opcodes
# make_opcodes := tools/make_opcodes$(EXE)
# bytecomp/opcodes.ml: runtime/caml/instruct.h $(make_opcodes)
# 	$(NEW_OCAMLRUN) $(make_opcodes) -opcodes < $< > $@
# bytecomp/opcodes.mli: bytecomp/opcodes.ml
# 	$(CAMLC) -i $< > $@
# $(make_opcodes): tools/make_opcodes.mll
# 	$(MAKE) -C tools make_opcodes

## tools/Makefile
# CAMLC = $(BOOT_OCAMLC) -g -nostdlib -I $(ROOTDIR)/boot \
#         -use-prims $(ROOTDIR)/runtime/primitives -I $(ROOTDIR)
# make_opcodes := make_opcodes$(EXE)
# $(eval $(call PROGRAM_SYNONYM,make_opcodes))
# $(make_opcodes): make_opcodes.ml
# 	$(CAMLC) $< -o $@

## macos make.log:
# cd stdlib - stdlib includes links to runtime/libcamlrun.a, runtime/libasmrun.a
# ../boot/ocamlrun ../boot/ocamllex -q make_opcodes.mll
## compile and link:
# ../boot/ocamlrun ../boot/ocamlc -nostdlib -I ../boot -g -use-prims ../runtime/primitives -I .. make_opcodes.ml -o make_opcodes
## run:
# ./runtime/ocamlrun tools/make_opcodes -opcodes < runtime/caml/instruct.h > bytecomp/opcodes.ml

boot_executable(
    name = "make_opcodes",
    main = ":Make_opcodes",
    visibility = ["//bytecomp:__pkg__"]
)

boot_module(
    name   = "Make_opcodes",
    struct = "make_opcodes.ml",
    nocopts = True,
    opts = ["-nostdlib"], # "-w", "-70"],
    deps   = STDLIB + [
    ],
    # data = ["//runtime:primitives"]
)

bootstrap_ocamllex(
    name = "make_opcodes_ml",
    out  = "make_opcodes.ml",
    src  = "make_opcodes.mll",
    opts = ["-q"]
    # vmargs = ["-t", "-b"]
)

################################################################
load("@bazel_skylib//rules:build_test.bzl", "build_test")
build_test(
    name = "tools",
    targets = [
        # ":Caml_tex",
        ":cmpbyt",
        # ":dumpobj",   ## sys target only
        # ":Eqparsetree",
        ":ocamlobjinfo",
        ":ocamlcmt",
        ":ocamlcp",
        ":ocamldep",
        ":ocamlmklib",
        ":ocamlmktop",
        ":ocamloptp",
        ":ocamlprof",
        ":primreq",
        ":stripdebug",
    ]
    ## TODO:
    # ] + select({
    #     "//compilers/mode:native": [":Lintapidiff.opt"]
    #     "//conditions:default": []
    # })
)

